========================
Changes for Lovey Pyrest
========================

2014/01/14 2.0.2
================

 - bugfix: prevent duplicate rendering of methods in autodoc

2014/01/14 2.0.1
================

 - updated documentation generation for lovely.pyrest 2.0

2014/01/10 2.0.0
================

 - new version using decorator approach to define rest services